# bacmask

./: .gitignore  CLAUDE.md  intro-rewrite.md  main.py  pyproject.toml
.github/workflows/: windows-build.yml
agent-briefs/: README.md  wave-0-preflight.md  wave-1a-area-shift.md  wave-1b-canvas-overlay.md  wave-1c-brush-commit.md  wave-2-anchor.md  wave-3-polish.md
bacmask/core/: area.py  (+7 more)
knowledge/: 000-project-overview.md  001-separation-of-concerns.md  002-state-management.md  003-undo-redo-commands.md  004-performance-large-images.md  005-testing-strategy.md  006-configuration-management.md  007-logging.md  008-directory-layout.md  009-deviations-from-claudemd.md  010-kivy-over-beeware.md  011-csv-for-area-output.md  012-png-label-maps.md  013-minimal-toolset.md  014-lasso-tool.md  015-bacmask-bundle.md  016-input-abstraction.md  017-calibration-input.md  018-load-mask-dim-mismatch.md  019-dev-tooling.md  020-platform-scope.md  021-vertex-edit-collision.md  022-region-split-helper.md  023-edit-mode-region-boolean-edits.md  024-mask-export-deferred.md  025-overlapping-regions.md  026-brush-edit-model.md  027-toolbar-hotkey-labels.md  028-file-picker-double-click.md  029-incremental-overlay-and-area-cache.md  030-polygons-are-mask-truth.md  031-minimap-navigator.md  032-save-as-dialog.md  033-file-picker-breadcrumb-bar.md  034-windows-image-open-with.md  035-io-source-carriers.md  036-single-action-dispatcher.md  README.md  _status.md
packaging/: README-windows.md  bacmask.spec  installer.iss  version_info.txt
scripts/: bench_polygon_refactor.py  bump_version.py
(+33 files in other folders)
