[project]
name = "bacmask"
version = "0.0.1"
description = "Bacteria colony masking and area measurement tool."
readme = "CLAUDE.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "kivy>=2.3.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
bacmask = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bacmask"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
